--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=2020.1.23
-manifoldVersion=2020.1.26-SNAPSHOT
+version=2020.1.27
+manifoldVersion=2020.1.27
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=LATEST-EAP-SNAPSHOT
 #defaultIjVersion=2020.1.2
