--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ wrapper {
   gradleVersion = '4.4'
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 tasks.withType(JavaCompile) {
   options.encoding = 'UTF-8'
@@ -113,7 +113,7 @@ runIde {
 }
 
 patchPluginXml {
-  sinceBuild '201.0'
+  sinceBuild '203.0'
   untilBuild '999.*'
 }
 
