--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -223,6 +223,10 @@ a discussion, ask questions, provide feedback, etc. Someone is usually there to 
     <![CDATA[
 <h3>Fixes & Features:<h3>
 <h4>
+<a href="https://github.com/manifold-systems/manifold/issues/223">#223</a>: IntelliJ plugin: account for IntelliJ's internal Array type as a pseudo generic type
+<br>
+<a href="https://github.com/manifold-systems/manifold/issues/222">#222</a>: Compiler: Fatal error processing with Manifold type processor: manifold.ext.ExtensionManifold on type: _temp_._Manifold_Temp_Main_
+<br>
 <a href="https://github.com/manifold-systems/manifold/issues/208">#208</a>: `withBearerAuthorization` does not populate correct Authorization header value
 <br>
 <a href="https://github.com/manifold-systems/manifold/issues/209">#209</a>: Patched classes via --patch-module are ignored
