--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 version=2020.3.37
-manifoldVersion=2020.1.40-SNAPSHOT
+manifoldVersion=2020.1.51-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=LATEST-EAP-SNAPSHOT
+#defaultIjVersion=LATEST-EAP-SNAPSHOT
+defaultIjVersion=2020.3.1
