--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=2020.3.38
+version=2021.1.1
 manifoldVersion=2021.1.1-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-#defaultIjVersion=LATEST-EAP-SNAPSHOT
-defaultIjVersion=2020.3.2
+defaultIjVersion=LATEST-EAP-SNAPSHOT
+#defaultIjVersion=2020.3.2
