--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=2020.1.37
-manifoldVersion=2020.1.37
+version=2020.1.38
+manifoldVersion=2021.1.9-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=2020.2.4
