https://github.com/manifold-systems/manifold/issues/273 - revise logic for protected property access

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-version=2021.1.10
-manifoldVersion=2021.1.10-SNAPSHOT
+version=2021.1.13
+manifoldVersion=2021.1.13-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=LATEST-EAP-SNAPSHOT
+#defaultIjVersion=LATEST-EAP-SNAPSHOT
+defaultIjVersion=2021.1.2
