--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,4 @@
-version=2021.1.13
-manifoldVersion=2021.1.13-SNAPSHOT
+version=2021.2.14
+manifoldVersion=2021.1.14-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-#defaultIjVersion=LATEST-EAP-SNAPSHOT
-defaultIjVersion=2021.1.2
+defaultIjVersion=LATEST-EAP-SNAPSHOT
