--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=2021.1.13
-manifoldVersion=2021.1.14-SNAPSHOT
+version=2021.1.15
+manifoldVersion=2021.1.15
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 #defaultIjVersion=LATEST-EAP-SNAPSHOT
-defaultIjVersion=2021.1.2
+defaultIjVersion=2021.1.3
