--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=2021.2.14
-manifoldVersion=2021.1.14-SNAPSHOT
+version=2021.2.15
+manifoldVersion=2021.1.15
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=LATEST-EAP-SNAPSHOT
