--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-version=2021.2.18
-manifoldVersion=2021.1.16
+version=2021.2.23
+manifoldVersion=2021.1.23
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
+#defaultIjVersion=2021.2.1
 defaultIjVersion=LATEST-EAP-SNAPSHOT
