--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=2021.2.23
-manifoldVersion=2021.1.23
+version=2021.2.24
+manifoldVersion=2021.1.24
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-#defaultIjVersion=2021.2.1
-defaultIjVersion=LATEST-EAP-SNAPSHOT
+defaultIjVersion=2021.2.2
+#defaultIjVersion=LATEST-EAP-SNAPSHOT
