--- a/build.gradle
+++ b/build.gradle
@@ -100,11 +100,11 @@ intellij {
   version getIjVersion() // Ordinarily, just use the version number: '15.0.6' or '2016.3'. Alternatively, the precise API level is OK too: 'IC-143.2370.31'
   if( version.contains( "EAP" ) || Double.parseDouble( version.substring(0, version.lastIndexOf('.'))) >= 2019.2 )
   {
-    plugins = ['java', 'com.intellij.lang.jsgraphql:2.4.0'] //include PsiViewer & GraphQL JS in sandbox
+    plugins = ['java', 'com.intellij.lang.jsgraphql:3.0.0'] //include GraphQL JS in sandbox
   }
   else
   {
-    plugins = ['com.intellij.lang.jsgraphql:2.4.0'] //include PsiViewer & GraphQL JS in sandbox
+    plugins = ['com.intellij.lang.jsgraphql:3.0.0'] //include GraphQL JS in sandbox
   }
 }
 
