https://github.com/manifold-systems/manifold/issues/306 - Support Java 17 https://github.com/manifold-systems/manifold/issues/290 - More performance-related changes targeting type resolution and completion

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=2021.2.25
-manifoldVersion=2021.1.25
+version=2021.2.26
+manifoldVersion=2021.1.26-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=2021.2.2
 #defaultIjVersion=LATEST-EAP-SNAPSHOT
