--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=2021.1.26
-manifoldVersion=2021.1.26
+version=2021.1.27
+manifoldVersion=2021.1.27-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=2021.1.3
