--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,4 @@
-version=2021.2.27
+version=2021.3.27
 manifoldVersion=2021.1.27-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=2021.2.2
-#defaultIjVersion=LATEST-EAP-SNAPSHOT
+defaultIjVersion=LATEST-EAP-SNAPSHOT
