--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ import org.gradle.api.tasks.testing.logging.TestLogEvent
 import java.util.concurrent.TimeUnit
 
 plugins {
-  id 'org.jetbrains.intellij' version '1.2.0'
+  id 'org.jetbrains.intellij' version '1.2.1'
 }
 
 description = 'Manifold :: IJ'
@@ -91,7 +91,7 @@ String getIjVersion() {
 intellij {
   pluginName = project.name
   version = getIjVersion()
-  plugins = ['java', 'com.intellij.lang.jsgraphql:3.0.0']
+  plugins = ['java']//, 'com.intellij.lang.jsgraphql:3.0.0']
 }
 
 runIde {
